add_executable(inetaddress_unittest InetAddress_unittest.cc)
target_link_libraries(inetaddress_unittest slack_net)

add_executable(buffer_unittest Buffer_unittest.cc)
target_link_libraries(buffer_unittest slack_net)

add_executable(channel_unittest Channel_unittest.cc)
target_link_libraries(channel_unittest slack_net)

add_executable(timerqueue_unittest TimerQueue_unittest.cc)
target_link_libraries(timerqueue_unittest slack_net)

add_executable(eventloop_unittest EventLoop_unittest.cc)
target_link_libraries(eventloop_unittest slack_net)

#add_executable(eventloopthread_unittest EventLoopThread_unittest.cc)
#target_link_libraries(eventloopthread_unittest muduo_net)


#add_executable(eventloopthreadpool_unittest EventLoopThreadPool_unittest.cc)
#target_link_libraries(eventloopthreadpool_unittest muduo_net) 


#add_executable(echoserver_unittest EchoServer_unittest.cc)
#target_link_libraries(echoserver_unittest muduo_net)

#add_executable(echoclient_unittest EchoClient_unittest.cc)
#target_link_libraries(echoclient_unittest muduo_net)

#add_executable(tcpclient_unittest TcpClient_unittest.cc)
#target_link_libraries(tcpclient_unittest muduo_net)